data/pc/1.17.1/README.md
<details><summary>Collected (64)</summary>
<p>

| Packet |
| --- |
| login |
| custom_payload |
| difficulty |
| abilities |
| held_item_slot |
| declare_recipes |
| tags |
| entity_status |
| declare_commands |
| unlock_recipes |
| position |
| player_info |
| update_view_position |
| update_light |
| map_chunk |
| spawn_entity_living |
| entity_metadata |
| entity_update_attributes |
| spawn_entity |
| entity_velocity |
| initialize_world_border |
| update_time |
| spawn_position |
| window_items |
| update_health |
| experience |
| keep_alive |
| multi_block_change |
| block_change |
| entity_move_look |
| rel_entity_move |
| entity_destroy |
| advancements |
| entity_equipment |
| entity_head_rotation |
| entity_teleport |
| entity_look |
| chat |
| named_entity_spawn |
| tab_complete |
| death_combat_event |
| respawn |
| game_state_change |
| sound_effect |
| set_slot |
| set_cooldown |
| entity_sound_effect |
| map |
| set_title_text |
| animation |
| world_event |
| scoreboard_objective |
| scoreboard_display_objective |
| scoreboard_score |
| named_sound_effect |
| entity_effect |
| remove_entity_effect |
| open_window |
| craft_progress_bar |
| close_window |
| boss_bar |
| spawn_entity_painting |
| collect |
| statistics |

</p>
</details>
<details><summary>Missing (39)</summary>
<p>

| Packet |
| --- |
| spawn_entity_experience_orb |
| block_break_animation |
| tile_entity_data |
| block_action |
| face_player |
| nbt_query_response |
| kick_disconnect |
| explosion |
| unload_chunk |
| open_horse_window |
| world_particles |
| trade_list |
| vehicle_move |
| open_book |
| open_sign_entity |
| craft_recipe_response |
| end_combat_event |
| enter_combat_event |
| resource_pack_send |
| camera |
| update_view_distance |
| attach_entity |
| set_passengers |
| teams |
| stop_sound |
| playerlist_header |
| select_advancement_tab |
| acknowledge_player_digging |
| sculk_vibration_signal |
| clear_titles |
| action_bar |
| world_border_center |
| world_border_lerp_size |
| world_border_size |
| world_border_warning_delay |
| world_border_warning_reach |
| ping |
| set_title_subtitle |
| set_title_time |

</p>
</details>